Initial exercise controller (#2)
* Initial Database configuration - mysql

* Exercise And User initial prototype

* Exercise And User initial prototype

* Prototyping data models